src/components/ResponsePanel/index.scss
@use '../../styles/variables/colors';

.response-panel {
  width: 50%;
  display: flex;
  flex-direction: column;
  height: 100%;

  .empty-placeholder {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    color: colors.$secondary-light-color;
  }

  .raw-response {
    text-align: left;
    padding: 0 20px;
    overflow-y: auto;
    overflow-x: auto;
    flex: 1 1 0;
    min-height: 0;
    font-size: 14px;
    line-height: 19px;
    font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, 'Source Code Pro', source-code-pro,
      monospace;
  }

  .raw-response::-webkit-scrollbar {
    height: 7px;
    width: 7px;
  }

  .raw-response::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    background-color: #272822; /* Matches ace monokai */
    border-radius: 10px;
  }

  .raw-response::-webkit-scrollbar-thumb {
    background-color: darkgrey;
    outline: 1px solid slategrey;
    border-radius: 10px;
  }

  .response-panel-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-shrink: 0;

    .navbar {
      width: 70%;
    }

    .status {
      display: flex;
      align-items: center;
      font-size: 15px;
    }

    .response-header-right {
      display: flex;
      align-items: center;
      gap: 15px;
      padding-right: 2px;
    }

    .response-size {
      color: colors.$accent-contrast-color;
      font-size: 15px;
    }

    .copyIcon {
      cursor: pointer;
    }

    .success {
      color: colors.$status-success-color;
    }

    .redirect {
      color: colors.$status-redirect-color;
    }

    .client-error {
      color: colors.$status-client-error-color;
    }

    .server-error {
      color: colors.$status-server-error-color;
    }
  }

  .time-taken {
    font-size: 14px;
    margin-left: 10px;
    color: #333;
  }
}

